# tdd_python_learning

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
deploy_tools/: fabfile.py  gunicorn-systemd.template.service  nginx.template.conf  provisioning_notes.md
superlists/accounts/: authentication.py  models.py  urls.py  views.py
superlists/accounts/migrations/: 0001_initial.py  0002_token.py
superlists/accounts/tests/: test_authentication.py  test_models.py  test_views.py
superlists/config/: settings.py  urls.py
superlists/features/steps/: my_lists.py
superlists/functional_tests/: base.py  list_page.py  my_list_page.py  server_tools.py  test_layout_and_styling.py  test_list_item_validation.py  test_login.py  test_my_lists.py  test_sharing.py  test_simple_list_creation.py  tests.py
superlists/functional_tests/management/commands/: create_session.py
superlists/lists/: api.py  api_urls.py  forms.py  models.py  tests.py  urls.py  views.py
superlists/lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list_item_list.py  0004_alter_item_options_alter_item_unique_together.py  0005_list_owner.py  0006_list_shared_with.py
superlists/lists/static/: list.js
superlists/lists/static/tests/: sinon-1.17.7.js  sinon-15.2.0.js  tests.html
superlists/lists/templates/: base.html  home.html  list.html  my_lists.html
superlists/lists/tests/: test_api.py  test_forms.py  test_models.py  test_views.py
superlists/tests/functional/: functional_tests.py
tests/functional/: functional_tests.py
