[tool.poetry]
name = "tdd_python"
version = "0.1.0"
description = ""
authors = ["Станислав Бескаев <stanislav.beskaev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.3"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
selenium = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = "True"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120


